<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/background_for_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/back_for_app"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.example.keyboardclicker.CustomScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="514dp"
            android:overScrollMode="never">

            <LinearLayout
                android:id="@+id/chat_window"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical">
            </LinearLayout>
        </com.example.keyboardclicker.CustomScrollView>

        <LinearLayout
            android:id="@+id/lin_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_start"
                android:layout_width="190dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_main_menu"
                android:text="@string/start_button_eng"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btn_options"
                android:layout_width="190dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_main_menu"
                android:text="@string/options_button_eng"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btn_scores"
                android:layout_width="190dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_main_menu"
                android:text="@string/scores_button_eng"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="465dp"
        android:background="@drawable/game_logo"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/background_for_app"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/background_for_app"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>